deploymentconfig-generic.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'http://gitlab.promnet.com.sv/xtecuan/quarkus-with-volume.git'
    openshift.io/generated-by: oc
  name: app-con-volumen
  namespace: samplexecuan
  labels:
    app: app-con-volumen
    app.kubernetes.io/component: app-con-volumen
    app.kubernetes.io/instance: app-con-volumen
    app.kubernetes.io/name: app-con-volumen
    app.kubernetes.io/part-of: app-con-volumen
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - app-con-volumen
        from:
          kind: ImageStreamTag
          namespace: samplexecuan
          name: 'app-con-volumen:latest'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: app-con-volumen
    deploymentconfig: app-con-volumen
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-con-volumen
        deploymentconfig: app-con-volumen
    spec:
      containers:
        - name: app-con-volumen
          image: >-
            image-registry.openshift-image-registry.svc:5000/samplexecuan/app-con-volumen
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
